# course_work_balloons

./: .gitignore  CMakeLists.txt  main.c
include/equations/: 2_levels.h  3_levels.h  utils.h
res/: course_work_gtk.glade
scripts/: 3_levels_plot.py  plot.py
src/: main.c
src/equations/: 2_levels.c  3_levels.c  utils.c
